# RagGov

./: .clineignore  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARK.md  CONTRIBUTING.md  LICENSE  README.md  README_v1.md  RELEASE_NOTES_v0.1-alpha.md  SECURITY_ASSESSMENT_FINAL.md  SECURITY_REVIEW_INJECTION_ANALYZER.md  SESSION_PLAN.md  baseline_after_day1_claim_report.json  baseline_after_day1_claim_report.md  baseline_after_day1_tests.json  ensemble_70b_eval.txt  ensemble_8b_eval.txt  govrag_evaluation.json  heuristic_eval.txt  llm_70b_eval.txt  llm_8b_eval.txt  pyproject.toml  run_stress_cases.py  test_simulate.py
Eval Docs/: BEFORE_AFTER_LAYER6_A2P.md  COMPLETE_CONVERSATION_SUMMARY.md  GOLDEN_SET_GOVRAG_EVALUATION.md  GOVRAG_HONEST_ASSESSMENT_1.md
benchmarks/: README.md  benchmark.py
data/: calibration_report_v1.json  calibration_report_v1_mock_llm.json  sufficiency_gold_set_v1.jsonl  sufficiency_gold_set_v1_README.md
docs/: BASELINE_WORKFLOW.md  FAILURE_TAXONOMY.md  POSITIONING.md  REAL_FAILURE_EVAL_PROTOCOL.md  ROADMAP_AFTER_ALPHA.md  V0_1_ALPHA_RELEASE.md  domain_agnostic_core_contract.md  evaluator_adapters.md  limitations.md
evals/: __init__.py
examples/: README.md  langchain_integration.py  llamaindex_integration.py
fixtures/: citation_mismatch.json  clean_pass.json  insufficient_context.json  parser_hierarchy_loss.json  parser_table_loss.json  poisoned_chunk.json  post_rationalized_citation.json  prompt_injection.json  stale_retrieval.json  unsupported_claims.json
harness/: README.md  failure_mode_registry.json  failure_mode_registry.md  protected_baseline.json  protected_paths.json
llm_wiki/: 00_START_HERE.md  01_PROJECT_CHARTER.md  02_ARCHITECTURE_MAP.md  03_AGENT_RULES.md  04_ANALYZER_REGISTRY.md  (+18 more)
(+703 files in other folders)
