[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raggov"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.20",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/raggov"]
